ip-iptables-002
root@k002:~# ip a
1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN group default qlen 1
    link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
    inet 127.0.0.1/8 scope host lo
       valid_lft forever preferred_lft forever
    inet6 ::1/128 scope host
       valid_lft forever preferred_lft forever
2: ens33: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc pfifo_fast state UP group default qlen 1000
    link/ether 00:0c:29:1b:e1:ab brd ff:ff:ff:ff:ff:ff
    inet 10.1.0.205/24 brd 10.1.0.255 scope global ens33
       valid_lft forever preferred_lft forever
    inet6 fe80::20c:29ff:fe1b:e1ab/64 scope link
       valid_lft forever preferred_lft forever
3: ens34: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc pfifo_fast state UP group default qlen 1000
    link/ether 00:0c:29:1b:e1:b5 brd ff:ff:ff:ff:ff:ff
    inet6 fe80::20c:29ff:fe1b:e1b5/64 scope link
       valid_lft forever preferred_lft forever
4: docker0: <NO-CARRIER,BROADCAST,MULTICAST,UP> mtu 1500 qdisc noqueue state DOWN group default
    link/ether 02:42:df:79:c5:4e brd ff:ff:ff:ff:ff:ff
    inet 172.17.0.1/16 scope global docker0
       valid_lft forever preferred_lft forever
5: datapath: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1376 qdisc noqueue state UNKNOWN group default qlen 1
    link/ether fa:aa:99:9a:c1:8c brd ff:ff:ff:ff:ff:ff
    inet6 fe80::f8aa:99ff:fe9a:c18c/64 scope link
       valid_lft forever preferred_lft forever
7: weave: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1376 qdisc noqueue state UP group default qlen 1000
    link/ether 3a:52:22:3e:7d:1e brd ff:ff:ff:ff:ff:ff
    inet 10.44.0.0/12 brd 10.47.255.255 scope global weave
       valid_lft forever preferred_lft forever
    inet6 fe80::3852:22ff:fe3e:7d1e/64 scope link
       valid_lft forever preferred_lft forever
8: dummy0: <BROADCAST,NOARP> mtu 1500 qdisc noop state DOWN group default qlen 1000
    link/ether 5e:28:a7:f7:0a:ec brd ff:ff:ff:ff:ff:ff
10: vethwe-datapath@vethwe-bridge: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1376 qdisc noqueue master datapath state UP group default
    link/ether fa:65:e2:ff:25:8c brd ff:ff:ff:ff:ff:ff
    inet6 fe80::f865:e2ff:feff:258c/64 scope link
       valid_lft forever preferred_lft forever
11: vethwe-bridge@vethwe-datapath: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1376 qdisc noqueue master weave state UP group default
    link/ether 52:7e:6d:aa:8f:d9 brd ff:ff:ff:ff:ff:ff
    inet6 fe80::507e:6dff:feaa:8fd9/64 scope link
       valid_lft forever preferred_lft forever
12: vxlan-6784: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 65485 qdisc noqueue master datapath state UNKNOWN group default qlen 1000
    link/ether 2e:fa:c6:dc:7f:2c brd ff:ff:ff:ff:ff:ff
    inet6 fe80::2cfa:c6ff:fedc:7f2c/64 scope link
       valid_lft forever preferred_lft forever
14: vethwepl48bdaa8@if13: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1376 qdisc noqueue master weave state UP group default
    link/ether ea:bb:b5:26:0e:44 brd ff:ff:ff:ff:ff:ff link-netnsid 0
    inet6 fe80::e8bb:b5ff:fe26:e44/64 scope link
       valid_lft forever preferred_lft forever
16: vethweplcfebeca@if15: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1376 qdisc noqueue master weave state UP group default
    link/ether de:0e:53:28:4d:ce brd ff:ff:ff:ff:ff:ff link-netnsid 1
    inet6 fe80::dc0e:53ff:fe28:4dce/64 scope link
       valid_lft forever preferred_lft forever
       
       
 root@k002:~# cat iptables-save-k002
# Generated by iptables-save v1.6.0 on Tue Mar 13 21:04:22 2018
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [4:240]
:POSTROUTING ACCEPT [4:240]
:DOCKER - [0:0]
:KUBE-MARK-DROP - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-SEP-7HQWHVRSIVQES2KA - [0:0]
:KUBE-SEP-AOCCJBE7RQNGFSXS - [0:0]
:KUBE-SEP-CZDMJ4CEUDGAXBQG - [0:0]
:KUBE-SEP-ES652KEXJGQ2TLCD - [0:0]
:KUBE-SEP-F7D3EGXH6GIY237U - [0:0]
:KUBE-SEP-GNF336AY35O2PZ5O - [0:0]
:KUBE-SEP-JEAMG6N6RZ3ZBSG5 - [0:0]
:KUBE-SEP-ZT5TVM6PMFDFQAMO - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-SWP62QIEGFZNLQE7 - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:KUBE-SVC-XGLOHA7QRQ3V22RZ - [0:0]
:WEAVE - [0:0]
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -j WEAVE
-A DOCKER -i docker0 -j RETURN
-A KUBE-MARK-DROP -j MARK --set-xmark 0x8000/0x8000
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-NODEPORTS -p tcp -m comment --comment "kube-system/kubernetes-dashboard:" -m tcp --dport 31737 -j KUBE-MARK-MASQ
-A KUBE-NODEPORTS -p tcp -m comment --comment "kube-system/kubernetes-dashboard:" -m tcp --dport 31737 -j KUBE-SVC-XGLOHA7QRQ3V22RZ
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -m mark --mark 0x4000/0x4000 -j MASQUERADE
-A KUBE-SEP-7HQWHVRSIVQES2KA -s 10.36.0.6/32 -m comment --comment "kube-system/kubernetes-dashboard:" -j KUBE-MARK-MASQ
-A KUBE-SEP-7HQWHVRSIVQES2KA -p tcp -m comment --comment "kube-system/kubernetes-dashboard:" -m tcp -j DNAT --to-destination 10.36.0.6:8443
-A KUBE-SEP-AOCCJBE7RQNGFSXS -s 10.44.0.5/32 -m comment --comment "default/svc-test-1:" -j KUBE-MARK-MASQ
-A KUBE-SEP-AOCCJBE7RQNGFSXS -p tcp -m comment --comment "default/svc-test-1:" -m tcp -j DNAT --to-destination 10.44.0.5:8080
-A KUBE-SEP-CZDMJ4CEUDGAXBQG -s 10.36.0.7/32 -m comment --comment "default/svc-test-1:" -j KUBE-MARK-MASQ
-A KUBE-SEP-CZDMJ4CEUDGAXBQG -p tcp -m comment --comment "default/svc-test-1:" -m tcp -j DNAT --to-destination 10.36.0.7:8080
-A KUBE-SEP-ES652KEXJGQ2TLCD -s 10.32.0.4/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-ES652KEXJGQ2TLCD -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.32.0.4:53
-A KUBE-SEP-F7D3EGXH6GIY237U -s 10.1.0.204/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-F7D3EGXH6GIY237U -p tcp -m comment --comment "default/kubernetes:https" -m recent --set --name KUBE-SEP-F7D3EGXH6GIY237U --mask 255.255.255.255 --rsource -m tcp -j DNAT --to-destination 10.1.0.204:6443
-A KUBE-SEP-GNF336AY35O2PZ5O -s 10.44.0.6/32 -m comment --comment "default/svc-test-1:" -j KUBE-MARK-MASQ
-A KUBE-SEP-GNF336AY35O2PZ5O -p tcp -m comment --comment "default/svc-test-1:" -m tcp -j DNAT --to-destination 10.44.0.6:9090
-A KUBE-SEP-JEAMG6N6RZ3ZBSG5 -s 10.36.0.8/32 -m comment --comment "default/svc-test-1:" -j KUBE-MARK-MASQ
-A KUBE-SEP-JEAMG6N6RZ3ZBSG5 -p tcp -m comment --comment "default/svc-test-1:" -m tcp -j DNAT --to-destination 10.36.0.8:9090
-A KUBE-SEP-ZT5TVM6PMFDFQAMO -s 10.32.0.4/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-ZT5TVM6PMFDFQAMO -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.32.0.4:53
-A KUBE-SERVICES -d 10.110.210.181/32 -p tcp -m comment --comment "kube-system/kubernetes-dashboard: cluster IP" -m tcp --dport 443 -j KUBE-SVC-XGLOHA7QRQ3V22RZ
-A KUBE-SERVICES -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES -d 10.111.246.253/32 -p tcp -m comment --comment "default/svc-test-1: cluster IP" -m tcp --dport 80 -j KUBE-SVC-SWP62QIEGFZNLQE7
-A KUBE-SERVICES -d 10.96.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SERVICES -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-SEP-ZT5TVM6PMFDFQAMO
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https" -m recent --rcheck --seconds 10800 --reap --name KUBE-SEP-F7D3EGXH6GIY237U --mask 255.255.255.255 --rsource -j KUBE-SEP-F7D3EGXH6GIY237U
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https" -j KUBE-SEP-F7D3EGXH6GIY237U
-A KUBE-SVC-SWP62QIEGFZNLQE7 -m comment --comment "default/svc-test-1:" -m statistic --mode random --probability 0.25000000000 -j KUBE-SEP-CZDMJ4CEUDGAXBQG
-A KUBE-SVC-SWP62QIEGFZNLQE7 -m comment --comment "default/svc-test-1:" -m statistic --mode random --probability 0.33332999982 -j KUBE-SEP-AOCCJBE7RQNGFSXS
-A KUBE-SVC-SWP62QIEGFZNLQE7 -m comment --comment "default/svc-test-1:" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-JEAMG6N6RZ3ZBSG5
-A KUBE-SVC-SWP62QIEGFZNLQE7 -m comment --comment "default/svc-test-1:" -j KUBE-SEP-GNF336AY35O2PZ5O
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns" -j KUBE-SEP-ES652KEXJGQ2TLCD
-A KUBE-SVC-XGLOHA7QRQ3V22RZ -m comment --comment "kube-system/kubernetes-dashboard:" -j KUBE-SEP-7HQWHVRSIVQES2KA
-A WEAVE -s 10.32.0.0/12 -d 224.0.0.0/4 -j RETURN
-A WEAVE ! -s 10.32.0.0/12 -d 10.32.0.0/12 -j MASQUERADE
-A WEAVE -s 10.32.0.0/12 ! -d 10.32.0.0/12 -j MASQUERADE
COMMIT
# Completed on Tue Mar 13 21:04:22 2018
# Generated by iptables-save v1.6.0 on Tue Mar 13 21:04:22 2018
*filter
:INPUT ACCEPT [120:40519]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [103:15954]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-SERVICES - [0:0]
:WEAVE-NPC - [0:0]
:WEAVE-NPC-DEFAULT - [0:0]
:WEAVE-NPC-INGRESS - [0:0]
-A INPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A INPUT -j KUBE-FIREWALL
-A FORWARD -o weave -m comment --comment "NOTE: this must go before \'-j KUBE-FORWARD\'" -j WEAVE-NPC
-A FORWARD -o weave -m state --state NEW -j NFLOG --nflog-group 86
-A FORWARD -o weave -j DROP
-A FORWARD -i weave ! -o weave -j ACCEPT
-A FORWARD -o weave -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m comment --comment "kubernetes forward rules" -j KUBE-FORWARD
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A DOCKER-ISOLATION -j RETURN
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A WEAVE-NPC -m state --state RELATED,ESTABLISHED -j ACCEPT
-A WEAVE-NPC -d 224.0.0.0/4 -j ACCEPT
-A WEAVE-NPC -m state --state NEW -j WEAVE-NPC-DEFAULT
-A WEAVE-NPC -m state --state NEW -j WEAVE-NPC-INGRESS
-A WEAVE-NPC -m set ! --match-set weave-local-pods dst -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-0EHD/vdN#O4]V?o4Tx7kS;APH dst -m comment --comment "DefaultAllow isolation for namespace: kube-public" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-?b%zl9GIe0AET1(QI^7NWe*fO dst -m comment --comment "DefaultAllow isolation for namespace: kube-system" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-E.1.0W^NGSp]0_t5WwH/]gX@L dst -m comment --comment "DefaultAllow isolation for namespace: default" -j ACCEPT
COMMIT
# Completed on Tue Mar 13 21:04:22 2018
root@k002:~#
