ip_iptables_info_001
root@k001:~# kubectl get po -o wide --all-namespaces
NAMESPACE     NAME                                    READY     STATUS    RESTARTS   AGE       IP           NODE
default       deploy-test-1-8646c8d498-7kc2p          1/1       Running   1          4d        10.36.0.7    k003
default       deploy-test-1-8646c8d498-l8f2l          1/1       Running   0          24m       10.44.0.5    k002
default       deploy-test-2-679f8946df-8zct8          1/1       Running   0          24m       10.44.0.6    k002
default       deploy-test-2-679f8946df-wlwlr          1/1       Running   1          4d        10.36.0.8    k003
default       iperfc-7f8bc954d5-cz7ng                 1/1       Running   0          39m       10.36.0.10   k003
default       iperfs-5b784d89c-6rlkx                  1/1       Running   1          4d        10.36.0.5    k003
default       iperfs-5b784d89c-b49lx                  1/1       Running   0          39m       10.36.0.9    k003
kube-system   etcd-k001                               1/1       Running   3          14d       10.1.0.204   k001
kube-system   kube-apiserver-k001                     1/1       Running   3          14d       10.1.0.204   k001
kube-system   kube-controller-manager-k001            1/1       Running   3          14d       10.1.0.204   k001
kube-system   kube-dns-6f4fd4bdf-92jvn                3/3       Running   27         14d       10.32.0.4    k001
kube-system   kube-proxy-59c66                        1/1       Running   1          14d       10.1.0.206   k003
kube-system   kube-proxy-7qrc7                        1/1       Running   3          14d       10.1.0.204   k001
kube-system   kube-proxy-smbkq                        1/1       Running   1          14d       10.1.0.205   k002
kube-system   kube-scheduler-k001                     1/1       Running   3          14d       10.1.0.204   k001
kube-system   kubernetes-dashboard-5bd6f767c7-hw8z5   1/1       Running   10         5d        10.36.0.6    k003
kube-system   weave-net-ck5tw                         2/2       Running   4          14d       10.1.0.205   k002
kube-system   weave-net-jkjdv                         2/2       Running   8          14d       10.1.0.204   k001
kube-system   weave-net-nflsp                         2/2       Running   4          14d       10.1.0.206   k003
root@k001:~# kubectl get svc -o wide --all-namespaces
NAMESPACE     NAME                   TYPE        CLUSTER-IP       EXTERNAL-IP   PORT(S)         AGE       SELECTOR
default       kubernetes             ClusterIP   10.96.0.1        <none>        443/TCP         14d       <none>
default       svc-test-1             ClusterIP   10.111.246.253   <none>        80/TCP          4d        app=web-front-end
kube-system   kube-dns               ClusterIP   10.96.0.10       <none>        53/UDP,53/TCP   14d       k8s-app=kube-dns
kube-system   kubernetes-dashboard   NodePort    10.110.210.181   <none>        443:31737/TCP   5d        k8s-app=kubernetes-dashboard
root@k001:~#

root@k001:~# ip a
1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN group default qlen 1
    link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
    inet 127.0.0.1/8 scope host lo
       valid_lft forever preferred_lft forever
    inet6 ::1/128 scope host
       valid_lft forever preferred_lft forever
2: ens33: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc pfifo_fast state UP group default qlen 1000
    link/ether 00:0c:29:ce:ff:b9 brd ff:ff:ff:ff:ff:ff
    inet 10.1.0.204/24 brd 10.1.0.255 scope global ens33
       valid_lft forever preferred_lft forever
    inet6 fe80::20c:29ff:fece:ffb9/64 scope link
       valid_lft forever preferred_lft forever
3: ens34: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc pfifo_fast state UP group default qlen 1000
    link/ether 00:0c:29:ce:ff:c3 brd ff:ff:ff:ff:ff:ff
    inet6 fe80::20c:29ff:fece:ffc3/64 scope link
       valid_lft forever preferred_lft forever
4: docker0: <NO-CARRIER,BROADCAST,MULTICAST,UP> mtu 1500 qdisc noqueue state DOWN group default
    link/ether 02:42:05:95:55:87 brd ff:ff:ff:ff:ff:ff
    inet 172.17.0.1/16 scope global docker0
       valid_lft forever preferred_lft forever
5: datapath: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1376 qdisc noqueue state UNKNOWN group default qlen 1
    link/ether 3e:e3:e4:14:1b:0f brd ff:ff:ff:ff:ff:ff
    inet6 fe80::3ce3:e4ff:fe14:1b0f/64 scope link
       valid_lft forever preferred_lft forever
7: weave: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1376 qdisc noqueue state UP group default qlen 1000
    link/ether a6:71:1b:65:6b:81 brd ff:ff:ff:ff:ff:ff
    inet 10.32.0.1/12 brd 10.47.255.255 scope global weave
       valid_lft forever preferred_lft forever
    inet6 fe80::a471:1bff:fe65:6b81/64 scope link
       valid_lft forever preferred_lft forever
8: dummy0: <BROADCAST,NOARP> mtu 1500 qdisc noop state DOWN group default qlen 1000
    link/ether e2:d8:6a:49:7b:aa brd ff:ff:ff:ff:ff:ff
10: vethwe-datapath@vethwe-bridge: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1376 qdisc noqueue master datapath state UP group default
    link/ether 12:9d:da:17:38:21 brd ff:ff:ff:ff:ff:ff
    inet6 fe80::109d:daff:fe17:3821/64 scope link
       valid_lft forever preferred_lft forever
11: vethwe-bridge@vethwe-datapath: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1376 qdisc noqueue master weave state UP group default
    link/ether 16:80:61:75:7b:d0 brd ff:ff:ff:ff:ff:ff
    inet6 fe80::1480:61ff:fe75:7bd0/64 scope link
       valid_lft forever preferred_lft forever
12: vxlan-6784: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 65485 qdisc noqueue master datapath state UNKNOWN group default qlen 1000
    link/ether 8a:85:2e:4c:93:e0 brd ff:ff:ff:ff:ff:ff
    inet6 fe80::8885:2eff:fe4c:93e0/64 scope link
       valid_lft forever preferred_lft forever
14: vethwepl263dd40@if13: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1376 qdisc noqueue master weave state UP group default
    link/ether d6:a1:f9:16:58:fe brd ff:ff:ff:ff:ff:ff link-netnsid 0
    inet6 fe80::d4a1:f9ff:fe16:58fe/64 scope link
       valid_lft forever preferred_lft forever
       


root@k001:~# iptables-save
# Generated by iptables-save v1.6.0 on Tue Mar 13 21:06:21 2018
*nat
:PREROUTING ACCEPT [2:180]
:INPUT ACCEPT [2:180]
:OUTPUT ACCEPT [19:1188]
:POSTROUTING ACCEPT [19:1188]
:DOCKER - [0:0]
:KUBE-MARK-DROP - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-SEP-7HQWHVRSIVQES2KA - [0:0]
:KUBE-SEP-AOCCJBE7RQNGFSXS - [0:0]
:KUBE-SEP-CZDMJ4CEUDGAXBQG - [0:0]
:KUBE-SEP-ES652KEXJGQ2TLCD - [0:0]
:KUBE-SEP-F7D3EGXH6GIY237U - [0:0]
:KUBE-SEP-GNF336AY35O2PZ5O - [0:0]
:KUBE-SEP-JEAMG6N6RZ3ZBSG5 - [0:0]
:KUBE-SEP-ZT5TVM6PMFDFQAMO - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-SWP62QIEGFZNLQE7 - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:KUBE-SVC-XGLOHA7QRQ3V22RZ - [0:0]
:WEAVE - [0:0]
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -j WEAVE
-A DOCKER -i docker0 -j RETURN
-A KUBE-MARK-DROP -j MARK --set-xmark 0x8000/0x8000
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-NODEPORTS -p tcp -m comment --comment "kube-system/kubernetes-dashboard:" -m tcp --dport 31737 -j KUBE-MARK-MASQ
-A KUBE-NODEPORTS -p tcp -m comment --comment "kube-system/kubernetes-dashboard:" -m tcp --dport 31737 -j KUBE-SVC-XGLOHA7QRQ3V22RZ
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -m mark --mark 0x4000/0x4000 -j MASQUERADE
-A KUBE-SEP-7HQWHVRSIVQES2KA -s 10.36.0.6/32 -m comment --comment "kube-system/kubernetes-dashboard:" -j KUBE-MARK-MASQ
-A KUBE-SEP-7HQWHVRSIVQES2KA -p tcp -m comment --comment "kube-system/kubernetes-dashboard:" -m tcp -j DNAT --to-destination 10.36.0.6:8443
-A KUBE-SEP-AOCCJBE7RQNGFSXS -s 10.44.0.5/32 -m comment --comment "default/svc-test-1:" -j KUBE-MARK-MASQ
-A KUBE-SEP-AOCCJBE7RQNGFSXS -p tcp -m comment --comment "default/svc-test-1:" -m tcp -j DNAT --to-destination 10.44.0.5:8080
-A KUBE-SEP-CZDMJ4CEUDGAXBQG -s 10.36.0.7/32 -m comment --comment "default/svc-test-1:" -j KUBE-MARK-MASQ
-A KUBE-SEP-CZDMJ4CEUDGAXBQG -p tcp -m comment --comment "default/svc-test-1:" -m tcp -j DNAT --to-destination 10.36.0.7:8080
-A KUBE-SEP-ES652KEXJGQ2TLCD -s 10.32.0.4/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-ES652KEXJGQ2TLCD -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.32.0.4:53
-A KUBE-SEP-F7D3EGXH6GIY237U -s 10.1.0.204/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-F7D3EGXH6GIY237U -p tcp -m comment --comment "default/kubernetes:https" -m recent --set --name KUBE-SEP-F7D3EGXH6GIY237U --mask 255.255.255.255 --rsource -m tcp -j DNAT --to-destination 10.1.0.204:6443
-A KUBE-SEP-GNF336AY35O2PZ5O -s 10.44.0.6/32 -m comment --comment "default/svc-test-1:" -j KUBE-MARK-MASQ
-A KUBE-SEP-GNF336AY35O2PZ5O -p tcp -m comment --comment "default/svc-test-1:" -m tcp -j DNAT --to-destination 10.44.0.6:9090
-A KUBE-SEP-JEAMG6N6RZ3ZBSG5 -s 10.36.0.8/32 -m comment --comment "default/svc-test-1:" -j KUBE-MARK-MASQ
-A KUBE-SEP-JEAMG6N6RZ3ZBSG5 -p tcp -m comment --comment "default/svc-test-1:" -m tcp -j DNAT --to-destination 10.36.0.8:9090
-A KUBE-SEP-ZT5TVM6PMFDFQAMO -s 10.32.0.4/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-ZT5TVM6PMFDFQAMO -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.32.0.4:53
-A KUBE-SERVICES -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES -d 10.111.246.253/32 -p tcp -m comment --comment "default/svc-test-1: cluster IP" -m tcp --dport 80 -j KUBE-SVC-SWP62QIEGFZNLQE7
-A KUBE-SERVICES -d 10.96.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SERVICES -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
-A KUBE-SERVICES -d 10.110.210.181/32 -p tcp -m comment --comment "kube-system/kubernetes-dashboard: cluster IP" -m tcp --dport 443 -j KUBE-SVC-XGLOHA7QRQ3V22RZ
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-SEP-ZT5TVM6PMFDFQAMO
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https" -m recent --rcheck --seconds 10800 --reap --name KUBE-SEP-F7D3EGXH6GIY237U --mask 255.255.255.255 --rsource -j KUBE-SEP-F7D3EGXH6GIY237U
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https" -j KUBE-SEP-F7D3EGXH6GIY237U
-A KUBE-SVC-SWP62QIEGFZNLQE7 -m comment --comment "default/svc-test-1:" -m statistic --mode random --probability 0.25000000000 -j KUBE-SEP-CZDMJ4CEUDGAXBQG
-A KUBE-SVC-SWP62QIEGFZNLQE7 -m comment --comment "default/svc-test-1:" -m statistic --mode random --probability 0.33332999982 -j KUBE-SEP-AOCCJBE7RQNGFSXS
-A KUBE-SVC-SWP62QIEGFZNLQE7 -m comment --comment "default/svc-test-1:" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-JEAMG6N6RZ3ZBSG5
-A KUBE-SVC-SWP62QIEGFZNLQE7 -m comment --comment "default/svc-test-1:" -j KUBE-SEP-GNF336AY35O2PZ5O
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns" -j KUBE-SEP-ES652KEXJGQ2TLCD
-A KUBE-SVC-XGLOHA7QRQ3V22RZ -m comment --comment "kube-system/kubernetes-dashboard:" -j KUBE-SEP-7HQWHVRSIVQES2KA
-A WEAVE -s 10.32.0.0/12 -d 224.0.0.0/4 -j RETURN
-A WEAVE ! -s 10.32.0.0/12 -d 10.32.0.0/12 -j MASQUERADE
-A WEAVE -s 10.32.0.0/12 ! -d 10.32.0.0/12 -j MASQUERADE
COMMIT
# Completed on Tue Mar 13 21:06:21 2018
# Generated by iptables-save v1.6.0 on Tue Mar 13 21:06:21 2018
*filter
:INPUT ACCEPT [1826:653028]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [1780:686959]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-SERVICES - [0:0]
:WEAVE-NPC - [0:0]
:WEAVE-NPC-DEFAULT - [0:0]
:WEAVE-NPC-INGRESS - [0:0]
-A INPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A INPUT -j KUBE-FIREWALL
-A FORWARD -o weave -m comment --comment "NOTE: this must go before \'-j KUBE-FORWARD\'" -j WEAVE-NPC
-A FORWARD -o weave -m state --state NEW -j NFLOG --nflog-group 86
-A FORWARD -o weave -j DROP
-A FORWARD -i weave ! -o weave -j ACCEPT
-A FORWARD -o weave -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m comment --comment "kubernetes forward rules" -j KUBE-FORWARD
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A DOCKER-ISOLATION -j RETURN
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A WEAVE-NPC -m state --state RELATED,ESTABLISHED -j ACCEPT
-A WEAVE-NPC -d 224.0.0.0/4 -j ACCEPT
-A WEAVE-NPC -m state --state NEW -j WEAVE-NPC-DEFAULT
-A WEAVE-NPC -m state --state NEW -j WEAVE-NPC-INGRESS
-A WEAVE-NPC -m set ! --match-set weave-local-pods dst -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-?b%zl9GIe0AET1(QI^7NWe*fO dst -m comment --comment "DefaultAllow isolation for namespace: kube-system" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-E.1.0W^NGSp]0_t5WwH/]gX@L dst -m comment --comment "DefaultAllow isolation for namespace: default" -j ACCEPT
-A WEAVE-NPC-DEFAULT -m set --match-set weave-0EHD/vdN#O4]V?o4Tx7kS;APH dst -m comment --comment "DefaultAllow isolation for namespace: kube-public" -j ACCEPT
COMMIT
# Completed on Tue Mar 13 21:06:21 2018
root@k001:~#
